--- a/index.html
+++ b/index.html
@@ -270,7 +270,10 @@
 				<div class="card-body">
 				  <h3>Thiago da Silva Nascimento</h3>
 				  <p>Tenho 20 anos<br>
-					Moro em Itapaci, Goiãs<br></p>
+					Moro em Itapaci, Goiãs<br>
+					Sou estudante de Sistemas de Informação<br>
+					Pretendo seguir na área de desenvolvimento web e mais pra frente mobile também
+				  </p>
 				</div>
 			</div>
 
