--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 				  <p>Tenho 20 anos<br>
 					Moro em Itapaci, Goiãs<br>
 					Sou estudante de Sistemas de Informação<br>
-					Pretendo seguir na área de desenvolvimento web e mais pra frente mobile também
+					Pretendo seguir na área de desenvolvimento web e mais pra frente desenvolvimento mobile também
 				  </p>
 				</div>
 			</div>
